# TeiLab-BasicLaboratoryWork-in-LifeScienceExperiments

./: .gitignore  .gitmessage  README.md  mypi.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/: BRANCH_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATES/: bug_report.md  feature_request.md
.github/workflows/: install_this_package.yml
data/: .gitignore  README.md  sample_list.txt
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  teilab-pcr-1.py  teilab-pcr-2.py  teilab-plot-matplotlib-1.py  teilab-plot-matplotlib-2.py  teilab-plot-matplotlib-3.py  teilab-plot-matplotlib-4.py  teilab-plot-matplotlib-5.py  teilab-plot-matplotlib-6.py  teilab-plot-plotly-1.html  teilab-plot-plotly-1.py  teilab-plot-plotly-2.html  teilab-plot-plotly-2.py  teilab-plot-plotly-3.html  teilab-plot-plotly-3.py  teilab-plot-plotly-4.html  teilab-plot-plotly-4.py  teilab-plot-plotly-5.html  teilab-plot-plotly-5.py  teilab-plot-plotly-6.html  teilab-plot-plotly-6.py  teilab-statistics-1.py  teilab-statistics-2.py  teilab-statistics-3.py  teilab-statistics-4.py  teilab-statistics-5.py  teilab-statistics-6.py  teilab.datasets.html  teilab.enrichment.html  teilab.html  teilab.normalizations.html  teilab.pcr.html  teilab.plot.html  (+11 more)
docs/_modules/: index.html
notebook/: Data Details.ipynb  README.md  [local] Start Jupyter Notebook with Poetry Environment.ipynb
teilab/: __init__.py  __meta__.py  datasets.py  enrichment.py  normalizations.py  pcr.py  question.py  seedmatch.py  statistics.py
tests/: conftest.py  data.py  test_normalizations.py  test_pcr.py  test_question.py  test_statistics.py
(+81 files in other folders)
