[tool.poetry]
name = "teilab"
version = "0.1.0"
description = "シークエンシング、生化学反応シミュレーション、および遺伝子発現プロファイリング等の生物情報科学的実験を行う。本実習は、生物化学科と合同で実施する。"
authors = ["iwasakishuto <cabernet.rock@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
matplotlib = "^3.4.2"
numpy = "^1.20.3"
pandas = "^1.2.4"
plotly = "^4.14.3"
tqdm = "^4.61.0"
nbformat = "^5.1.3"
scipy = "1.4.1"
nptyping = "^1.4.2"
tabulate = "^0.8.9"
gseapy = "^0.10.4"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"
flake8-mypy = "^17.8.0"
isort = "^5.8.0"
pytest = "^6.2.4"
ipykernel = "^5.5.5"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"
sphinxext-opengraph = "^0.4.2"
sphinxemoji = "^0.1.8"
sphinx_fontawesome = "^0.0.6"
psutil = "^5.8.0"
sphinx-plotly-directive = "^0.1.3"
Cython = "^0.29.23"
joblib = "^1.0.1"
install-requires = "^0.3.0"
pip = "^21.1.2"
sphinx-togglebutton = "^0.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
